fixed wrong font size

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -46,6 +46,11 @@ body {
     color: #3500d3;
 }
 
+.colouredTextProj {
+    color: #3500d3;
+    font-size: 14px;
+}
+
 .backgroundContainer {
     background-color: rgb(231, 231, 231);
     padding-left: 20px;
